--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
 	"name": "stardust",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
 		"serve": "vite",
-		"build": "vite build",
+		"build": "tsc -b && vite build",
 		"lint": "eslint .",
-		"fix": "eslint --fix .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"fmt:w": "prettier --write \"src/**/*.{ts,tsx}\"",
+		"fmt:c": "prettier --check \"src/**/*.{ts,tsx}\"",
+		"clean": "rm -rf dist",
+		"reset": "rm -rf node_modules yarn.lock && yarn cache clean && yarn install",
+		"bump": "yarn cache clean && yarn upgrade -L"
 	},
 	"dependencies": {
 		"history": "^5.3.0",
@@ -19,14 +23,16 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
+		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
-		"@vitejs/plugin-react": "^5.1.1",
-		"babel-plugin-react-compiler": "^1.0.0",
+		"@vitejs/plugin-react-swc": "^4.2.2",
 		"eslint": "^9.39.1",
 		"eslint-plugin-react-hooks": "^7.0.1",
 		"eslint-plugin-react-refresh": "^0.4.24",
 		"globals": "^16.5.0",
+		"typescript": "~5.9.3",
+		"typescript-eslint": "^8.46.4",
 		"vite": "^7.2.4"
 	}
 }
